# pokemon-stats

./: .gitignore  LICENSE  README.md  pyproject.toml
Input_data/: Calculate_dual_dual_type from single_type.ipynb  Calculate_full_dual_dual_type from dual_type.ipynb  Calculate_full_dual_dual_type from single_type.ipynb  Read_dual_type_chart.ipynb  Read_pokemon_stats.ipynb  Read_single_type_chart.ipynb  Transpose_dual_type_chart.ipynb  Transpose_single_type_chart.ipynb  dual_dual_type_chart.csv  dual_dual_type_chart_from_single.csv  dual_single_type_chart.csv  dual_type_chart.csv  full_dual_dual_type_chart_from_dual.csv  full_dual_dual_type_chart_from_single.csv  pokemon_all_gen.csv  project_colors.py  single_dual_type_chart.csv  single_single_type_aggregate_statistics.csv  single_single_type_chart.csv  single_type_chart.csv
Notebooks/: EIGENVECTORS_and_Probability_Matrices_dual_type_pokemon.ipynb  EIGENVECTORS_and_Probability_Matrices_single_type_pokemon.ipynb  PCA_on_pokemon_stats.ipynb  PCA_pokemon_stats.ipynb  Pokemon_single_type_advantage_RANKING.ipynb  Pokemon_stats_scatter_charts.ipynb  RANKING_dual_type_pokemon.ipynb  RANKING_single_type_pokemon.ipynb  STATS_scatter_charts.ipynb  using probabilities for type matchups.ipynb
Visualizations/: PCA_on_pokemon_stats.ipynb  Pokemon_double type_advantage_RANKING.ipynb  Pokemon_single_type_advantage_RANKING.ipynb
src/: setup.py
src/pokemon_stats/: __init__.py  mat_utils.py  pca_utils.py  poke_colors.py  temp.py  viz.py
src/pokemon_stats.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
