[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pokemon-stats"
version = "0.1.0"
description = "Utilities for Pokémon type analysis and visualization"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "graphviz",
    "networkx",
    "plotly",
]